# rust-html-render-benchmarks

./: Cargo.toml  results.txt  run.sh
benches/: askama.rs  askama.rs.bak  fhtml.rs  handlebars.rs  html_node.rs  hyped.rs  hyped.rs.bak  hypertext.rs  loops.rs  maud.rs  maud.rs.bak  minijinja.rs  tera.rs  tera.rs.bak  tinytemplate.rs  tinytemplate.rs.bak  vy.rs
docs/: cargo-timing-askama-recompile.html  cargo-timing-askama.html  cargo-timing-fhtml.html  cargo-timing-handlebars.html  cargo-timing-html_node.html  cargo-timing-hyped-recompile.html  cargo-timing-hyped.html  cargo-timing-hypertext.html  cargo-timing-maud-recompile.html  cargo-timing-maud.html  cargo-timing-minijinja.html  cargo-timing-tera-recompile.html  cargo-timing-tera.html  cargo-timing-tinytemplate-recompile.html  cargo-timing-tinytemplate.html  cargo-timing-vy.html  cargo-timing.html  index.html  list.html
